fixed account button location
now on right side and not overlapping with name

--- a/frontend/src/Components/Style/Home.css
+++ b/frontend/src/Components/Style/Home.css
@@ -48,7 +48,7 @@ h1 {
   #account-button {
     position: absolute;
     top: 20px; /* Adjust as needed */
-    left: 20px; /* Adjust as needed */
+    right: 120px; /* Adjust as needed */
     background-color: #c2fbd7;
     border-radius: 100px;
     box-shadow: rgba(44, 187, 99, .2) 0 -25px 18px -14px inset, rgba(44, 187, 99, .15) 0 1px 2px, rgba(44, 187, 99, .15) 0 2px 4px, rgba(44, 187, 99, .15) 0 4px 8px, rgba(44, 187, 99, .15) 0 8px 16px, rgba(44, 187, 99, .15) 0 16px 32px;
